# capable_camera_firmware

./: .gitignore  README.md
camera/: CMakeLists.txt  app.cpp  camera_config.json  config.json
camera/core/: libcamera_app.cpp  libcamera_encoder.hpp  options.cpp  options.hpp  post_processor.cpp  video_options.hpp
camera/encoder/: CMakeLists.txt  encoder.cpp  encoder.hpp  h264_encoder.cpp  mjpeg_encoder.cpp  mjpeg_encoder.hpp  null_encoder.cpp
camera/network/: CMakeLists.txt  file_manager.cpp  file_output.cpp  file_output.hpp  net_output.cpp  net_output.hpp  output.cpp  output.hpp
camera/post_processing_stages/: CMakeLists.txt  object_classify_tf_stage.cpp  object_detect_tf_stage.cpp  tf_stage.cpp
common/src/: logger.cpp
scripts/: eeprom_access.py
src/: handlers.zig  main.zig
